<resources>

    <string name="app_name">"School Report "</string>

    <string name="labelActvCadstrarNota">Register Grade</string>
    <string name="labelActvAlterarNota">Change Grade</string>
    <string name="labelActvNotas">Saved Grades</string>
    <string name="labelActvSobre">About</string>
    <string name="labelActvPreferencias">User Preferences</string>

    <!-- #### Labels #### -->
    <string name="labelDisciplina">Subjects</string>
    <string name="labelBimestre">Bimester</string>
    <string name="labelAnoLetivo">School year</string>
    <string name="labelProfessor">Teacher</string>
    <string name="labelAtividade">Activity</string>
    <string name="labelNota">Grade</string>
    <string name="label1Bi">1st</string>
    <string name="label2Bi">2nd</string>
    <string name="label3Bi">3nd</string>
    <string name="label4Bi">4nd</string>
    <string name="labelRascunho">Draft</string>
    <string name="labelPreferencias">Preferences</string>

    <string name="labelAluno">Student</string>
    <string name="labelLeonardo">Leonardo Ramos da Silva</string>
    <string name="labelCurso">Course</string>
    <string name="labelEspecializacao">Especialização JAVA XX</string>
    <string name="labelEmail">Email</string>
    <string name="labelEmailAutor">tato.leo@gmail.com</string>
    <string name="labelDescricao">Description</string>
    <string name="labelDescricaoText">Register the subjects you are taking and their bimonthly grades for each activity. Thus, with the subjects and grades registered, the App will show the averages and allow for a simpler monitoring of school performance. In the App, it will be easier to visualize which subjects are doing well and which ones need to reinforce their studies.</string>
    <string name="labelOrdenacao">List Orderning</string>
    <string name="labelSelecionadoPadrao">Selected by Default</string>



    <!-- #### Botões #### -->
    <string name="btSalvar">Save</string>
    <string name="btLimpar">Clean</string>
    <string name="btExibirNotas">grade display</string>
    <string name="btSobre">About</string>
    <string name="btAdicionar">Add</string>
    <string name="btEditar">Edit</string>
    <string name="btExcluir">Delete</string>

    <!-- #### Valores Estáticos #### -->
    <string name="ano2019">2019</string>
    <string name="ano2020">2020</string>
    <string name="ano2021">2021</string>
    <string name="ano2022">2022</string>
    <string name="ano2023">2023</string>

    <string name="disciplinaBiologia">Biology</string>
    <string name="disciplinaEducacaoFisica">Physical Education</string>
    <string name="disciplinaHistoria">\tHistory</string>
    <string name="disciplinaPortugues">English</string>
    <string name="disciplinaMatematica">Math</string>
    <string name="disciplinaQuimica">Chemistry</string>
    <string name="disciplinaFisica">Physics</string>
    <string name="disciplinaSociologia">Sociology</string>

    <string name="professorJoao">João Silva</string>
    <string name="professorMario">Mario Quintana</string>
    <string name="professorJose">José Gonçalves</string>
    <string name="professorLeonardo">Leonardo Ramos</string>
    <string name="professorCarlos">Carlos Santos</string>

    <string name="atividadeTrabalho">Coursework</string>
    <string name="atividadeApresentacao">Presentation</string>
    <string name="atividadeProva">Test</string>

    <!-- #### Mensagens #### -->
    <string name="msgNenhum">None</string>
    <string name="msgFoiSelecionado">has been selected!</string>
    <string name="msgFoiInformada">has been informed!</string>
    <string name="msgCamposLimpos">Clean fields!</string>
    <string name="msgSemDados">No data saved!</string>
    <string name="msgDadosSalvos">Data saved successfully!</string>
    <string name="msgNotaExcluida">Grade Deleted Successfully!</string>
    <string name="msgDadosAlterados">Successfully changed data!</string>

    <!-- #### Dialog #### -->
    <string name="dDesejaExcluir">"Do you really want to delete the note "</string>
    <string name="dConfirm">Confirm</string>
    <string name="dRespSim">Yes</string>
    <string name="dRespNao">No</string>

</resources>