<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SobreActivity">

  <TextView
      android:id="@+id/lbAluno"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="16dp"
      android:text="@string/labelAluno"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tvAluno"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/labelLeonardo"
      app:layout_constraintStart_toStartOf="@+id/lbAluno"
      app:layout_constraintTop_toBottomOf="@+id/lbAluno" />

  <TextView
      android:id="@+id/lbCurso"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/labelCurso"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="@+id/tvAluno"
      app:layout_constraintTop_toBottomOf="@+id/tvAluno" />

  <TextView
      android:id="@+id/tvCurso"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/labelEspecializacao"
      app:layout_constraintStart_toStartOf="@+id/lbCurso"
      app:layout_constraintTop_toBottomOf="@+id/lbCurso" />

  <TextView
      android:id="@+id/lbEmail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/labelEmail"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="@+id/tvCurso"
      app:layout_constraintTop_toBottomOf="@+id/tvCurso" />

  <TextView
      android:id="@+id/tvEmail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/labelEmailAutor"
      app:layout_constraintStart_toStartOf="@+id/lbEmail"
      app:layout_constraintTop_toBottomOf="@+id/lbEmail" />

  <TextView
      android:id="@+id/lbDescricao"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="@string/labelDescricao"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="@+id/tvEmail"
      app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

  <TextView
      android:id="@+id/tvDescricao"
      android:layout_width="361dp"
      android:layout_height="155dp"
      android:text="@string/labelDescricaoText"
      android:textSize="12sp"
      app:layout_constraintStart_toStartOf="@+id/lbDescricao"
      app:layout_constraintTop_toBottomOf="@+id/lbDescricao" />

  <ImageView
      android:id="@+id/imageView"
      android:layout_width="245dp"
      android:layout_height="79dp"
      android:layout_marginTop="32dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tvDescricao"
      app:srcCompat="@drawable/utfpr" />

</androidx.constraintlayout.widget.ConstraintLayout>